# gmbox

./: Justfile  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js
src-tauri/: Cargo.toml  Justfile  build.rs  tauri.conf.json
src-tauri/migrations/: 20221102135624_create-entity-templates.down.sql  20221102135624_create-entity-templates.up.sql  20221102152504_create-entities.down.sql  20221102152504_create-entities.up.sql
src-tauri/src/: logger.rs  main.rs  menu.rs  slug.rs
src-tauri/src/db/: mod.rs
src-tauri/src/template/: command.rs  mod.rs
src/lib/: notifications.ts  types.ts
src/lib/components/: Menu.svelte  Modal.svelte  Navbar.svelte
src/lib/fields/: Field.ts  TextField.ts  index.ts
src/lib/styles/: _variables.scss  app.scss
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/templates/: +page.svelte  +page.ts  ModalBlankTemplate.svelte  ModalSelectKind.svelte
src/routes/templates/[slug]/: +page.svelte  +page.ts  ModalFieldType.svelte  ModalTextField.svelte
